src/chrome/komodo/skin/partials/scheme-skinning.p.less
@import url("chrome://komodo/skin/plat/shared/icons_depend.less");
@import url("chrome://komodo/skin/_config/window.less");

.setVars() when (@dark = 1)
{
    @background-primary:    lighten(@background, 5%);
    
    @foreground-focus:      lighten(@foreground, 20%);
    @background-contrast:   darken(@background-primary, 5%);
    @border:                @background;
    @background-button:     @background-contrast;
    @background-button-hover:darken(@background-contrast, 5%);
    @background-input:      @background;
    @background-selected:   fade(desaturate(@special, 2%), 30%);
    
    @background-scrollbar:          @background;
    @background-scrollbar-thumb:    lighten(@background, 10%);
    @background-scrollbar-thumb-hover: lighten(@background, 15%);
    @background-scrollbar-hover:    darken(@background, 5%);
    
    @background-statusbar:      @background-primary;
    @border-statusbar:          lighten(@background, 5%);
    
    splitter.workspace_splitter
    {
        &[orient="vertical"], &[orient="vertical"]:-moz-window-inactive
        {
            border-top: 0 !important;
            margin-bottom: -3px !important;
        }
    
        &[orient="horizontal"]
        {
            &:not(.workspace_splitter_right)
            {
                border-right: 0 !important;
                margin-left: -3px !important;
            }
    
            &.workspace_splitter_right
            {
                border-left: 0 !important;
                margin-right: -3px !important;
            }
        }
    }

/* #if PLATFORM != "win" */
    #workspace_bottom_area,
    #editorvbox tabbox tabs
    {
        border-left: @panel-border !important;
        border-right: @panel-border !important;
    }
/* #endif */
    
    #workspace_left_area tabpanel,
    #workspace_right_area tabpanel
    {
        border-left: 0 !important;
        border-right: 0 !important;
    }
    
    view tabbox:not(.tabs-bottom) > tabs
    {
        border-bottom: 0 !important;
    }
    
    #komodo-editor-vbox
    {
        border-top: 0 !important;
    }
}

.setVars() when (@dark = 0)
{
    @background-primary:    darken(@background, 10%);
    
    @foreground-focus:      darken(@foreground, 10%);
    @background-contrast:   darken(@background-primary, 5%);
    @border:                @background;
    @background-button:     @background-contrast;
    @background-button-hover:lighten(@background-contrast, 5%);
    @background-input:      @background;
    @background-selected:   fade(desaturate(@special, 5%), 60%);
    
    @background-scrollbar:          @background;
    @background-scrollbar-thumb:    darken(@background, 12%);
    @background-scrollbar-thumb-hover: darken(@background, 20%);
    @background-scrollbar-hover:    darken(@background, 5%);
    
    @background-statusbar:      @background-primary;
    @border-statusbar:          darken(@background, 10%);
}

.setVars();

@foreground-selected:   contrast(@background-selected);
@special-fore: contrast(@special);

/* Hud */

.hud
{
    background: @background-primary !important;
    background-image: none !important;
    color: @foreground !important;
    border-color: @border !important;
    
    separator
    {
        -moz-appearance: none !important;
        height: 1px !important;
        max-height: 1px !important;
        background: fade(@border, 50%) !important;
    }

    .docked
    {
        background: fade(@border, 50%) !important;
    }

    .special
    {
        background: @special !important;
        color: @special-fore !important;
    }
    
    .selected
    {
        color: @foreground-selected !important;
        background: @background-selected !important;
    }

    richlistitem,
    listitem,
    row,
    textbox,
    menulist
    {
        color: @foreground !important;
        border-color: fade(@border, 0%) !important;

        &[selected="true"]
        {
            color: @foreground-selected !important;
            background: @background-selected !important;
        }

        &[focused]:not([selected="true"])
        {
            color: @foreground-focus !important;
            border-color: @border !important;
        }
    }

    ::-moz-selection {
        color: @special-fore !important;
        background: @special;
    }
    
    :not(button) > button:not(.button-plain):not(.unstyled),
    & > button:not(.button-plain):not(.unstyled)
    {
        background: @background-button !important;
        border: 1px solid @border !important;

        &:hover
        {
            background-color: @background-button-hover !important;
        }
    }

    button:not(.button-plain):not(.unstyled)
    {
        color: @foreground !important;
    }
}

#commando-panel.loading .loader
{
    background-image: linear-gradient(to right, rgba(0,0,0,0.0) 0, fade(@special, 20%) 200px, fade(@special, 20%) 300px, rgba(0,0,0,0.0) 500px) !important;
}

#commando-panel.previewing.loading .loader
{
    background-image: linear-gradient(to right, rgba(0,0,0,0.0) 0, fade(@special, 20%) 100px, fade(@special, 20%) 150px, rgba(0,0,0,0.0) 250px) !important;
}

#commando-panel.previewing:not(.maximized) #commando-preview
{
    border-color: @border !important;
}

.statusbar
{
    border-top: 1px solid @border-statusbar !important;
}

statusbar#statusbarviewbox,
.hud
{
    :not(menupopup) > textbox:not(.transparent),
    menulist:not(.unstyled)
    {
        -moz-appearance: none !important;
        background: @background-input !important;
        border: 0;

        & > hbox
        {
            -moz-appearance: none !important;
            background-color: transparent !important;
        }
    }

    :not(menupopup) > textbox
    {
        color: @foreground !important;
    }
    
    .input-field
    {
        background-color: @background-input !important;
    }
    
    .editor-field
    {
        color: @foreground !important;
        background-color: @background !important;
    }
}

scintilla[virtualScrollbars="true"] row > scrollbar,
.skinnedScrollbars
{
    border: 0;
    background: transparent;
    -moz-appearance: none !important;

    slider
    {
        -moz-appearance: none !important;
        border: 0;
        background: @background-scrollbar !important;
    }

    thumb
    {
        -moz-appearance: none !important;
        background: @background-scrollbar-thumb !important;
        border: 0;
    }

    thumb:hover
    {
        -moz-appearance: none !important;
        background: @background-scrollbar-thumb-hover !important;
    }
    
    scrollbarbutton
    {
        visibility: collapse;
    }
    
    &[orient="horizontal"] thumb
    {
        min-width: 25px;
    }

    &[orient="vertical"] thumb
    {
        min-height: 25px;
    }

    &:hover
    {
        slider
        {
            -moz-appearance: none;
            background: @background-scrollbar-hover !important;
        }
    }
    
    &[orient="vertical"]
    {
        width: 10px;
    }
    
    &[orient="horizontal"]
    {
        height: 10px;
    }
}

/* Do not skin non-editor scrollbars on OSX */
/* #if PLATFORM != "darwin" */
.hud scrollbar
{
    .skinnedScrollbars();
}
/* #endif */

/* Statusbar */

window:not([view-type="editor"])
{
    statusbar#statusbarviewbox
    {
        visibility: collapse;
    }
}

statusbar#statusbarviewbox
{
    -moz-appearance: none !important;
    background: @background-statusbar !important;
    background-image: none !important;
    color: fade(@foreground, 60%) !important;
    border: 0 !important;

    statusbarpanel
    {
        -moz-appearance: none !important;
        background: transparent !important;
        border: 0 !important;
        padding: 0 2px 0 !important;
    }


    /* Statusbar Buttons */

    button:not([type="menu"]),
    sectionlist,
    toolbarbutton
    {
        -moz-appearance: none !important;
        background: transparent;
        color: fade(@foreground, 60%) !important;
        border: 0;
        border-radius: 0 !important;

        margin: 0;
        
        &:not(.breadcrumb)
        {
            padding: 0 2px !important;
        }

        & > label
        {
            color: fade(@foreground, 60%) !important;
        }

        &:hover
        {
            background: fade(darken(@background-primary, 5%), 40%) !important;
            
            &, & > label
            {
                color: lighten(@foreground, 10%) !important;
            }
        }
    }

    sectionlist textbox
    {
        -moz-appearance: none !important;
        background: lighten(@background-primary, 5%) !important;
        color: @foreground !important;
        border: 0 !important;
        
        & > hbox
        {
            -moz-appearance: none !important;
            background: transparent !important;
        }
    }

    .statusbar-resizerpanel
    {
        visibility: collapse;
    }

}

vbox[anonid="quickstart"]
{
    background-image: none !important;
}

statusbarpanel > toolbarbutton[type="menu"] > dropmarker
{
    opacity: 0.6;
    list-style-image: @icon-hud-dropmarker !important;
}

#statusbar-throbber-inner
{
    background: @special !important;
}

#breadcrumbBar .breadcrumb .breadcrumb-arrow
{
    background-image: @icon-hud-crumb-arrow !important;
}

#commando-search-quick[open]
{
    background: @background-primary !important;
    color: @foreground !important;
    
    &[placeholder="true"]
    {
        color: fade(@foreground, 50%) !important;
    }
}

minimap
{
    border-left: 1px solid @border !important;
}

.hud.shell-output
{
    textbox
    {
        background: transparent !important;
    }
}

